--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.2",
     "rimraf": "^3.0.2",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.10"
   },
   "devDependencies": {
