--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/schedule": "^2.1.0",
     "@nestjs/swagger": "^11.0.6",
     "@nestjs/typeorm": "^9.0.1",
+    "axios": "^1.8.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
